# toddy

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile.ci  README.md  justfile
.config/: nextest.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
docs/: protocol.md
julep/: Cargo.toml
julep-core/: Cargo.toml
julep-core/src/: a11y_widget.rs  codec.rs  effects.rs  engine.rs  extensions.rs  image_registry.rs  lib.rs  message.rs  prelude.rs  protocol.rs  testing.rs  tree.rs  widgets.rs
julep-core/src/protocol/: incoming.rs  mod.rs  outgoing.rs
julep-core/src/widgets/: caches.rs  canvas.rs  display.rs  helpers.rs  input.rs  interactive.rs  layout.rs  mod.rs  render.rs  validate.rs
julep-renderer/: Cargo.toml
julep-renderer/src/: headless.rs  renderer.rs
julep/src/: headless.rs  lib.rs  mock.rs  scripting.rs  test_protocol.rs
julep/src/renderer/: app.rs  apply.rs  constants.rs  emitters.rs  events.rs  mod.rs  run.rs  stdin.rs  subscriptions.rs  update.rs  view.rs  widget_ops.rs  window_ops.rs
toddy/: Cargo.toml
toddy-core/: Cargo.toml
toddy-core/src/: app.rs  codec.rs  effects.rs  extensions.rs  image_registry.rs  lib.rs  message.rs  prelude.rs  prop_helpers.rs  testing.rs  theming.rs  tree.rs
toddy-core/src/protocol/: incoming.rs  mod.rs  outgoing.rs  types.rs
toddy-core/src/widgets/: a11y.rs  caches.rs  canvas.rs  display.rs  helpers.rs  input.rs  interactive.rs  layout.rs  mod.rs  overlay.rs  render.rs  table.rs  validate.rs
toddy/src/: headless.rs  lib.rs  main.rs  scripting.rs
toddy/src/renderer/: app.rs  apply.rs  constants.rs  emitters.rs  events.rs  mod.rs  run.rs  stdin.rs  subscriptions.rs  update.rs  view.rs  widget_ops.rs  window_map.rs  window_ops.rs
toddy/tests/: session_multiplexing.rs
