[workspace]
members = ["toddy-core", "toddy"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toddy-ui/toddy"
authors = ["Daniel Hedlund <daniel@digitree.org>"]
keywords = ["gui", "desktop", "renderer", "native", "iced"]
categories = ["gui", "rendering"]
