[package]
name = "julep-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "julep_core"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
log = "0.4"
rfd = { version = "0.15", optional = true }
arboard = { version = "3", optional = true }
notify-rust = { version = "4", optional = true }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
qrcode = { version = "0.14", optional = true, default-features = false }
accesskit = { version = "0.18", optional = true }

[features]
default = ["builtin-all", "dialogs", "clipboard", "notifications"]
builtin-all = ["widget-image", "widget-svg", "widget-canvas", "widget-markdown", "widget-highlighter", "widget-sysinfo", "widget-qr-code"]
widget-image = ["iced/image"]
widget-svg = ["iced/svg"]
widget-canvas = ["iced/canvas"]
widget-markdown = ["iced/markdown"]
widget-highlighter = ["iced/highlighter"]
widget-sysinfo = ["iced/sysinfo"]
widget-qr-code = ["iced/canvas", "dep:qrcode"]
dialogs = ["rfd"]
clipboard = ["arboard"]
notifications = ["notify-rust"]
a11y = ["dep:accesskit"]
