[package]
name = "julep-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "julep_renderer"
path = "src/lib.rs"

[[bin]]
name = "julep-renderer"
path = "src/main.rs"

[dependencies]
julep-core = { path = "../julep-core" }
env_logger = "0.11"
log = "0.4"
iced = { version = "0.14", features = ["tokio", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
iced_test = { version = "0.14", optional = true }
sha2 = { version = "0.10", optional = true }
iced_winit = { version = "0.14", optional = true }
accesskit = { version = "0.18", optional = true }

[features]
default = ["builtin-all", "dialogs", "clipboard", "notifications", "a11y"]
builtin-all = ["widget-image", "widget-svg", "widget-canvas", "widget-markdown", "widget-highlighter", "widget-sysinfo", "widget-qr-code"]
widget-image = ["julep-core/widget-image"]
widget-svg = ["julep-core/widget-svg"]
widget-canvas = ["julep-core/widget-canvas"]
widget-markdown = ["julep-core/widget-markdown"]
widget-highlighter = ["julep-core/widget-highlighter"]
widget-sysinfo = ["julep-core/widget-sysinfo", "iced/sysinfo"]
widget-qr-code = ["julep-core/widget-qr-code"]
dialogs = ["julep-core/dialogs"]
clipboard = ["julep-core/clipboard"]
notifications = ["julep-core/notifications"]
headless = ["iced_test", "sha2"]
test-mode = ["sha2"]
a11y = ["julep-core/a11y", "dep:iced_winit", "iced_winit/a11y", "dep:accesskit"]
