[package]
name = "toddy-core"
description = "Core library and extension SDK for the toddy native GUI renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
name = "toddy_core"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.6", package = "toddy-iced", features = ["tokio", "advanced", "image", "svg", "canvas", "markdown", "highlighter", "sysinfo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
log = "0.4"
rfd = "0.15"
arboard = "3"
notify-rust = "4"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
qrcode = { version = "0.14", default-features = false }
sha2 = "0.10"
