[package]
name = "toddy"
description = "Native GUI renderer driven by a wire protocol over stdin/stdout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
name = "toddy"
path = "src/lib.rs"

[[bin]]
name = "toddy"
path = "src/main.rs"

[dependencies]
toddy-core = { path = "../toddy-core" }
env_logger = "0.11"
log = "0.4"
iced = { version = "0.6", package = "toddy-iced", features = ["tokio", "advanced", "sysinfo", "a11y"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
iced_test = { version = "0.6", package = "toddy-iced-test" }
sha2 = "0.10"
